# signature

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake.yml  linux.yml  windows.yml
include/: BlockInfo.h  Calculator.h  ConcurrentQueue.h  Queues.h  Reader.h  Signature.h  Writer.h
src/: Calculator.cpp  Reader.cpp  Signature.cpp  Writer.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
